[gd_scene load_steps=8 format=3 uid="uid://bpn3pg2ngwhhm"]

[ext_resource type="Script" path="res://cafe_design_hud.gd" id="1_18fnn"]
[ext_resource type="Texture2D" uid="uid://bq4rfk3gbon5b" path="res://Sprites/cubeButton.png" id="1_awyqr"]
[ext_resource type="Texture2D" uid="uid://dehmyvy6xyetp" path="res://Sprites/cubeButtonPressed.png" id="2_o3v4c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_re5mb"]
size = Vector2(40, 40)

[sub_resource type="Animation" id="Animation_hb846"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScrollMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(456, 6)]
}

[sub_resource type="Animation" id="Animation_xfi8l"]
resource_name = "pull"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScrollMenu:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -80), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("button:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(456, 6), Vector2(456, 86)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mev5y"]
_data = {
"RESET": SubResource("Animation_hb846"),
"pull": SubResource("Animation_xfi8l")
}

[node name="CafeDesignHud" type="CanvasLayer"]
script = ExtResource("1_18fnn")

[node name="button" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.95
anchor_top = 0.037
anchor_right = 0.983
anchor_bottom = 0.093
offset_left = -3.05176e-05
offset_top = -3.99
offset_right = 0.159973
offset_bottom = -2.11
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("1_awyqr")
texture_pressed = ExtResource("2_o3v4c")

[node name="ScrollMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -80.0
offset_right = 480.0
mouse_filter = 2

[node name="ColorRect3" type="ColorRect" parent="ScrollMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 725.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.552941, 0.521569, 0.486275, 1)

[node name="ColorRect" type="ColorRect" parent="ScrollMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.619608, 0.584314, 0.545098, 1)

[node name="ColorRect2" type="ColorRect" parent="ScrollMenu"]
layout_mode = 0
offset_left = -925.0
offset_bottom = 80.0
color = Color(0.552941, 0.521569, 0.486275, 1)

[node name="InventoryList" type="HBoxContainer" parent="ScrollMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="dragArea" type="Area2D" parent="ScrollMenu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScrollMenu/dragArea"]
position = Vector2(240, 40)
shape = SubResource("RectangleShape2D_re5mb")

[node name="puller" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mev5y")
}

[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
[connection signal="input_event" from="ScrollMenu/dragArea" to="." method="_on_drag_area_input_event"]
